--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,13 @@
-<!doctype html><title>Page title</title><p>Hi</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <ul>
+        <li><a href="./chapters/one">cap</a></li>
+    </ul>                       
+</body>
+</html>
